feat: add API to batch insert identities
